deploy: 633fa0eebcbdce5d77bddb2a0cc6f4d548c40a48

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -448,6 +448,7 @@ font-display: fallback;
   padding: 0.1em 0.5em;
   background-color: var(--clr-background);
   color: var(--clr-foreground);
+  border: 1px solid var(--clr-foreground);
   }
   button:hover {
   cursor: pointer;
