Font weights are adjusted for light and dark mode

--- a/_app/_sass/elements.scss
+++ b/_app/_sass/elements.scss
@@ -10,13 +10,20 @@ body {
   text-rendering: optimizeSpeed;
   font-family: var(--ff-body);
   font-size: var(--fs-2);
-  font-weight: var(--fw-2);
   line-height: 1.75;
   letter-spacing: -0.25px;
   color: var(--clr-foreground);
 
   & > * {
     overflow: auto;
+  }
+
+  &.light {
+    font-weight: var(--fw-2);
+  }
+
+  &.dark {
+    font-weight: var(--fw-1);
   }
 }
 
@@ -62,8 +69,11 @@ hr {
   }
 }
 
-strong {
+.light strong {
   font-weight: var(--fw-4);
+}
+.dark strong {
+  font-weight: var(--fw-3);
 }
 
 em {
