--- a/_app/_layouts/default.html
+++ b/_app/_layouts/default.html
@@ -14,11 +14,13 @@
 
     {% include page-title.html %}
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&&family=JetBrains+Mono:wght@200;300&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap">
+
     <link rel="stylesheet" href="/assets/styles/base.css">
-    <link rel="preload" href="/assets/fonts/oswald-semibold.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/assets/fonts/source-serif-4-variable-italic.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/assets/fonts/source-serif-4-variable.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/assets/fonts/roboto-mono.woff2" as="font" type="font/woff2" crossorigin>
 
     {% for css in layout.css %}
       <link rel="stylesheet" href="/assets/styles/{{ css }}" />
