--- a/_app/_sass/fonts.scss
+++ b/_app/_sass/fonts.scss
@@ -1,66 +1,41 @@
-@font-face {
-  font-family: 'Source Serif 4';
-  src: url('../fonts/source-serif-4-variable.woff2') format('woff2');
-  font-display: fallback;
-  font-weight: 200 900;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Source Serif 4';
-  src: url('../fonts/source-serif-4-variable-italic.woff2') format('woff2');
-  font-weight: 200 900;
-  font-style: italic;
-  font-display: fallback;
-}
-
-@font-face {
-  font-family: 'Oswald';
-  src: url('../fonts/oswald-semibold.woff2') format('woff2');
-  font-weight: 600;
-  font-style: normal;
-  font-display: fallback;
-}
-
-@font-face {
-  font-family: 'Roboto Mono';
-  src: url('../fonts/roboto-mono.woff2') format('woff2');
-  font-style: normal;
-  font-display: fallback;
-}
-
 :root {
   /* fonts */
-  --ff-body: 'Source Serif 4', serif;
+  --ff-body: 'Source Sans 3', sans-serif;
   --ff-header: 'Oswald', sans-serif;
-  --ff-code: 'Roboto Mono', monospace;
+  --ff-code: 'JetBrains Mono', monospace;
 
   /* font sizes */
-  --fs-1: 0.875rem;
-  --fs-2: 1.125rem;
-  --fs-3: 2rem;
-  --fs-4: 2.5rem;
+  --fs-1: 0.75rem;
+  --fs-2: 1rem;
+  --fs-3: 1.75rem;
+  --fs-4: 2.25rem;
   --fs-5: 3rem;
 
   /* font weights */
-  --fw-1: 300;
-  --fw-2: 400;
-  --fw-3: 600;
-  --fw-4: 800;
+  --fw-1: 200;
+  --fw-2: 300;
+  --fw-3: 400;
+  --fw-4: 600;
 
   --lh-1: 1.1;
-  --lh-2: 1.4;
+  --lh-2: 1.4; // Remove when post list is styled, Nick - Sat Nov 23 2024
   --lh-3: 1.75;
 }
 
-@media (width < 600px) {
+@media (width <= 720px) {
   :root {
     font-size: 16px;
   }
 }
 
-@media (width >= 600px) {
+@media (width <= 1440px) {
   :root {
     font-size: 20px;
+  }
+}
+
+@media (width > 1440px) {
+  :root {
+    font-size: 24px;
   }
 }
