--- a/_app/_includes/progressive-image.html
+++ b/_app/_includes/progressive-image.html
@@ -1,5 +1,5 @@
 <picture>
-  <source srcset="/assets/images/{{ include.asset }}.avif" type="image/avif">
-  <source srcset="/assets/images/{{ include.asset }}.webp" type="image/webp">
-  <img src="/assets/images/{{ include.asset }}.png" alt="{{ include.alt_text }}">
+  <source srcset="/assets/images/{{ include.path }}/{{ include.asset }}/{{ include.asset }}.avif" type="image/avif">
+  <source srcset="/assets/images/{{ include.path }}/{{ include.asset }}/{{ include.asset }}.webp" type="image/webp">
+  <img src="/assets/images/{{ include.path }}/{{ include.asset }}/{{ include.asset }}.png" alt="{{ include.alt_text }}">
 </picture>
