Header styles are corrected

--- a/_app/_layouts/default.html
+++ b/_app/_layouts/default.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&&family=JetBrains+Mono:wght@200;300&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap">
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&&family=JetBrains+Mono:wght@200;300&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap">
 
     <link rel="stylesheet" href="/assets/styles/base.css">
 
@@ -34,7 +34,7 @@
   <body>
     <header class="primary-header">
       <section class="container">
-        <a href="/">nick arora</a>
+        <a class="site-id" href="/">Nick Arora</a>
         <nav>
           {% include theme-toggle.html %}
         </nav>
