--- a/_app/_sass/theme-toggle.scss
+++ b/_app/_sass/theme-toggle.scss
@@ -8,25 +8,29 @@
   overflow: hidden;
   position: relative;
   border: 1px solid currentColor;
-  border-radius: 0.25rem;
+  border-radius: 100%;
   padding: 0 0.25rem;
 
   .icons {
     height: 2rem;;
     transition: 0.1s;
 
-    * {
-      margin: 1px 0;
+    .sun, .moon {
       width: 1.25rem;
       height: 1.25rem;
     }
 
+    .sun {
+      margin: 2px 0;
+    }
+
     .moon {
+      margin: 1px 0;
       padding: 0 1px 1px 1px;
     }
   }
 
-  input[type=checkbox]:checked + .icons {
+  input[type=checkbox]:not(:checked) + .icons {
     transform: translateY(-1.35rem);
   }
 
