Post preview styles are updated

--- a/_app/_sass/elements.scss
+++ b/_app/_sass/elements.scss
@@ -30,23 +30,30 @@ strong {
   font-weight: var(--fw-4);
 }
 
-h1, h2, h3 {
+h1, h2, h3, .h1, .h2, .h3 {
   font-family: var(--ff-header);
   font-weight: var(--fw-3);
-  line-height: var(--lh-1);
   letter-spacing: -0.75px;
+  line-height: var(--lh-1);
 }
 
 .h1, h1 {
-  font-size: var(--fs-5);
+  font-size: var(--fs-6);
 }
 
 .h2, h2 {
-  font-size: var(--fs-4);
+  font-size: var(--fs-5);
 }
 
 .h3, h3 {
+  font-size: var(--fs-4);
+}
+
+.h4, h4 {
+  font-family: var(--ff-body);
+  font-weight: var(--fw-3);
   font-size: var(--fs-3);
+  letter-spacing: -0.75px;
 }
 
 ul, ol {
