--- a/_app/_includes/post-previews.html
+++ b/_app/_includes/post-previews.html
@@ -1,20 +1,27 @@
 <ul class="post-previews">
   {% for post in include.posts %}
-    <li>
-      <header>
-        <a href="{{ post.url }}">
-          {{ post.title }}
-        </a>
-        <div class="post-metadata">
-          <time datetime="{{ post.date }}">{{ post.date | date: "%B %-d, %Y" }}</time>
-          {% include reading-time.html content=post.content %}
+    <li class="post-preview">
+      <a href="{{ post.url }}">
+        <div class="metadata">
+          <time datetime="{{ post.date }}">
+            {{ post.date | date: "%B %-d, %Y" }}
+          </time>
+
+          <div class="reading-time">
+            {% include reading-time.html content=post.content %}
+          </div>
         </div>
-      </header>
-      {% if post.summary %}
-        <p class="summary">
-          {{ post.summary }}
-        </p>
-      {%- endif -%}
+
+        <div class="title h4">
+          {{ post.title }}
+        </div>
+
+        {% if post.summary %}
+          <p class="summary">
+            {{ post.summary }}
+          </p>
+        {%- endif -%}
+      </a>
     </li>
   {% endfor %}
 </ul>
