Line height for small headers is corrected

--- a/_app/_sass/elements.scss
+++ b/_app/_sass/elements.scss
@@ -54,6 +54,7 @@ h1, h2, h3, .h1, .h2, .h3 {
   font-weight: var(--fw-3);
   font-size: var(--fs-3);
   letter-spacing: -0.75px;
+  line-height: var(--lh-1);
 }
 
 ul, ol {
