deploy: 6a3859cd29670b6e4f6b5d333c85c618775baa4f

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -324,6 +324,7 @@ max-width: 100%;
   font-weight: var(--fw-3);
   font-size: var(--fs-3);
   letter-spacing: -0.75px;
+  line-height: var(--lh-1);
   }
   ul, ol {
   padding-left: 1rem;
