--- a/_app/_sass/posts.scss
+++ b/_app/_sass/posts.scss
@@ -6,6 +6,12 @@
     padding: 2rem 0 2rem 0;
     border-top: 1px solid var(--clr-primary);
 
+    > * {
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+    }
+
     a {
       text-decoration: none;
     }
