--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -463,6 +463,11 @@ max-width: 100%;
   padding: 2rem 0 2rem 0;
   border-top: 1px solid var(--clr-primary);
   }
+  .post-previews li.post-preview > * {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  }
   .post-previews li.post-preview a {
   text-decoration: none;
   }
