Sass use directive, rather than import

--- a/_app/assets/styles/base.scss
+++ b/_app/assets/styles/base.scss
@@ -1,17 +1,17 @@
 ---
 ---
 
-@import "reset";
-@import "fonts";
-@import "colors";
-@import "syntax-highlight";
-@import "spacing";
-@import "elements";
-@import "text";
-@import "exceptions";
-@import "theme-toggle";
-@import "social-media";
-@import "layouts";
-@import "button";
-@import "posts";
-@import "tags";
+@use "reset";
+@use "fonts";
+@use "colors";
+@use "syntax-highlight";
+@use "spacing";
+@use "elements";
+@use "text";
+@use "exceptions";
+@use "theme-toggle";
+@use "social-media";
+@use "layouts";
+@use "button";
+@use "posts";
+@use "tags";
