--- a/_app/_sass/posts.scss
+++ b/_app/_sass/posts.scss
@@ -6,6 +6,11 @@
     padding: 2rem 0 2rem 0;
     border-top: 1px solid var(--clr-primary);
 
+    &:first-child {
+      border-top: none;
+      padding: 0 0 2rem 0;
+    }
+
     > * {
       display: flex;
       flex-direction: column;
