--- a/_app/_sass/layouts.scss
+++ b/_app/_sass/layouts.scss
@@ -17,7 +17,7 @@
   margin-bottom: 2rem;
 
   background-color: var(--clr-background);
-  border-bottom: 1px solid color-mix(in lab, var(--clr-background) 90%, var(--clr-foreground));
+  border-bottom: 1px solid var(--clr-tertiary);
 
   & > section {
     display: flex;
