--- a/_app/_sass/posts.scss
+++ b/_app/_sass/posts.scss
@@ -4,7 +4,7 @@
   li.post-preview {
     list-style: none;
     padding: 2rem 0 2rem 0;
-    border-top: 1px solid var(--clr-primary);
+    border-top: 1px solid var(--clr-tertiary);
 
     &:first-child {
       border-top: none;
